<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textVisiblePassword"
                android:nextFocusForward="@+id/password" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Password"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/sessionm" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sessionm_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/SessionM"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/sessionm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textUri"
                android:nextFocusForward="@+id/button_Start" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNoNet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/connection_lost" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/button_Start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/Start" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name" android:layout_alignParentLeft="true" android:layout_marginLeft="10dp"/>

</RelativeLayout>